# mcp-server-project

./: README.md  config.yaml  project_plan.md  server.py
docs/课件、项目要求/结业项目/U2025011_莫XX_U20250222_张XX/: YA_MCPServer_DeepReport.txt
docs/课件、项目要求/结业项目/U2025011_莫XX_U20250222_张XX/YA_MCPServer_DeepReport/: config.yaml  pyproject.toml  server.py
docs/课件、项目要求/结业项目/U2025011_莫XX_U20250222_张XX/YA_MCPServer_DeepReport/modules/YA_Common/utils/: logger.py
docs/课件、项目要求/结业项目/U2025011_莫XX_U20250222_张XX/YA_MCPServer_DeepReport/resources/: hello_resource.py
docs/课件、项目要求/结业项目/U2025011_莫XX_U20250222_张XX/YA_MCPServer_DeepReport/tools/: hello_tool.py
docs/选题方向/: project_plan_classification.md  project_plan_deep_learning.md
modules/YA_Common/utils/: logger.py
resources/: data_loader.py
tools/: data_loader.py
